07/26/17
- Added some tutorial in configurations.py
- Added the following commands that are related to Minecraft though it may be used for other things as well
	/show_location_names: The bot returns a list of names of locations from the database
	/add_location: The user can add new locations (name, coordinates)to the database
	/show_location: The bot returns the coordinates of the location that the user specifies from using the command /show_location_names
- The Firebase database now works with Discord Bot

07/25/17
- Removed /test command, it was redundant
- Minor changes to the following commands: 
	renamed /instanceof to /trollEveryone and added more functionality
	renamed /noinstance to /noMoreTroll
	renamed /choice to /pick
- Moved all of Discord IDs and data that the bot requires from Bot.py into configurations.py to make it easier for the user to customize
- Added program header/information and To-do List in Bot.py
- Added /help command: Bot returns a list commands that the bot can perform but more details abou each command will be added a bit later
- Added /ask command: Functions similar to "Eight Ball," the bot returns an answer to user in yes, no, or perhaps form

07/22/17
- Added /pyhelp command: Allows the user to use the bot to search in Python's documentations

07/21/17
- Added /noinstance command: Return everyone's nickname back to normal in the server

07/20/17
- Added /instanceof command: Add "instanceof" to everyone's nickname in the server
- Added /choice command: allows user to let the bot pick out of a set of choices that the user provides

07/19/17
- Added a changelog

07/18/17
- Added /hug and /kill commands; two silly commands for the user to play with
- Updated Readme about what's required to install

07/17/17
- Added a /echo command that lets the bot echo what the user said
- Converted the project from JavaScript to Python

06/01/17
- Updated some information about the project in Readme.md

05/31/17