@@ -1,10 +1,17 @@
 # Discord-Bot
-A text bot created for Discord voice and chat app. Its purpose is to act as a personal helper. Right now, there's not a lot of functions but more is currently being added.
+A general purpose bot created for Discord.
 
-Requirements:
-Python
-Discord.py
+# Requirements
 
-To install Discord.py, open a command line after installing python and type: python -m pip install -U .[voice]
+1. Python
+2. Discord.py
+3. pyrebase
 
+# Installation
+
+1. Download and install the lastest version of Python. Be sure to add Python's path to the Enviromental Variables!
+1. Next, to install Discord.py, open a command line and type: python -m pip install -U .[voice]
+2. Then, install pyrebase by typing the following in a command line: pip install pyrebase
+3. After that, open /docs/configurations.py (preferably with Notepad++ or a similar program)and the tutorials in the file will help you retrieve the information that the bot requires to run.
+4. Once all of the information in the configurations file is filled out, the bot is ready to run, double click Bot.py! For more information on what commands the bot can use, type /help in the Discord chat.
 
