@@ -1,26 +1,38 @@
-# For now, the default command prefix is "/"
-# Example: /echo Hello There
-# You are free to change the command prefix to anything you wish.
+##########################################################################################
+# Program Name:				Discord Bot
+# Author:					DMCTruong
+# Last Updated:				July 27, 2017
+# Program Description:		A general purpose bot that was created for Discord chat	
+##########################################################################################
 
+
+# <-------------------------- Discord Bot Configurations --------------------------------->
+
+# The following are information that the bot requires before the bot can run.
+# Once all of the following information is filled out, the bot will be ready to use. Just 
+# double click on Bot.py and you will be able to use all of the bot commands in discord! 
+
+# For more information about what commands the bot can use, type /commands or /help in 
+# the Discord chat.
+
+# <--------------------------------------------------------------------------------------->
 
 PREFIX = "/"
 
-###################################################################################################
-# Please follow this tutorial to get various Discord IDs
-# https://support.discordapp.com/hc/en-us/articles/206346498-Where-can-I-find-my-User-Server-Message-ID-
+# Currently, the default command prefix is "/"
+# For example: /echo Hello World
+# You are welcome to change the command prefix to anything you wish.
 
 BOT_OWNER_ID = "Bot Owner's ID here"
 BOT_ID = "Bot's ID here"
 
-###################################################################################################
-# Follow this tutorial to get a Discord Bot token
-# https://github.com/reactiflux/discord-irc/wiki/Creating-a-discord-bot-&-getting-a-token
+# Please follow this tutorial to get various Discord IDs.
+# https://support.discordapp.com/hc/en-us/articles/206346498-Where-can-I-find-my-User-Server-Message-ID-
 
 BOT_TOKEN = "Bot's Token here"
 
-###################################################################################################
-# To get Firebase info, follow this tutorial until you get all of the information to fill out the missing data below
-# https://firebase.google.com/docs/web/setup
+# This tutorial will show how to get a Discord Bot token.
+# https://github.com/reactiflux/discord-irc/wiki/Creating-a-discord-bot-&-getting-a-token
 
 FIREBASE_INFO = {
     "apiKey": "Firebase API Key here",
@@ -31,6 +43,17 @@ FIREBASE_INFO = {
     "messagingSenderId": "Firebase Messaging Sender ID here"
 }
 
-###################################################################################################
+# To get Firebase info, please follow the tutorial below. You do not need to follow the entire tutorial, 
+# it is only until you get all of the information needed to fill out the required data above.
+# https://firebase.google.com/docs/web/setup
+
+
+# <--------------------------------------------------------------------------------------->
 
 # Thank you for using DMCTruong's Discord Bot!
+
+# For support, please submit a "New Issue" to the link below and I will do my best to help
+# https://github.com/DMCTruong/Discord-Bot/issues
+
+
+# <--------------------------------------------------------------------------------------->
